Drop support for Java 7 and recommend previous Socomo versions for it. This will ease development for newest versions of Java, like 21.